hphp/test/zend/bad/ext/sockets/tests/socket_sentto_recvfrom_ipv6_udp-win32.php.skipif
<?php
if (!extension_loaded('sockets')) {
    die('SKIP The sockets extension is not loaded.');
}
if (substr(PHP_OS, 0, 3) != 'WIN') {
	die('skip only for Windows');
}
require 'ipv6_skipif.inc';